@@ -1,6 +1,7 @@
 ags (4.5.4)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* implemented ags_pad_reset_flags()
 	* fixed ags_complex_get() return value
 	* fixed ags_complex_get_term() and ags_complex_set_term() gtk-doc function
 	* fixed ags_vst3_manager_load_file() w32 related plugin_so handle broken reference
